--- a/teaching/f2023_calc2.html
+++ b/teaching/f2023_calc2.html
@@ -1,1 +1,150 @@
-.
+<html>
+<head>
+<title> Calculus II </title>
+</head>
+<font face="Times New Roman">
+<body>
+<h1><p align="center">Calculus II</p></h1>
+<h3><p align="center">Course 0941003 Section 02, Fall 2022</p></h3>
+<h3><p align="center">Tuesdays 11:00 - 11:50, Thursdays 10:00 - 11:50, Room: E1-2 #306</p></h3>
+<h3><p align="center">Chungbuk National University</p></h3>
+<br>
+
+
+<!-- FONT SIZE SPECIFICATION-->
+<font size="4" >
+<b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_chungbuk.jpg" width="337" height="62"><br>
+<b>Office Hours:</b> Tuesdays 18:00--18:50 at E1-1 Room 110.<br>
+<b>Syllabus:</b>  <a href="f2022_calc2/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
+
+
+<h2><p>Announcements</p></h2>
+<!--
+2022-12-20: Letter grades have been submitted. Happy Holidays!<br> 
+2022-12-05: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>    
+2022-11-29: If you wish to see graded papers and the class attendance record, please send an email to the instructor to set up an appointment by December 19th, 2022 18:00.<br> 
+2022-11-29: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> Details have been posted below.<br>    
+2022-11-18: <FONT color="#FF00FF"><b>3rd midterm exam announcement</b></FONT> Details have been posted below.<br>    
+2022-11-18: <FONT COLOR="red">Homework #6, #7</FONT> have been posted below.<br>   
+2022-10-28: <FONT color="#FF00FF"><b>2nd midterm exam announcement</b></FONT> Details have been posted below.<br>    
+2022-10-20: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>    
+2022-10-13: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>    
+2022-09-25: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>    
+2022-09-25: <FONT color="#FF00FF"><b>1st midterm exam announcement</b></FONT> The coverage has been updated.<br>     
+2022-09-16: <FONT color="#FF00FF"><b>1st midterm exam announcement</b></FONT> Details have been posted below.<br>    
+2022-09-16: <b>Announcements</b> The classes will go online on Thursday September 22nd. Please read email announcements.<br>   
+2022-09-16: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>    
+2022-09-12: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>    
+2022-09-02: <b>Announcements</b> The classes will go online on Tuesday September 6th. Please read email announcements.<br>   
+2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
+2022-09-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
+ -->
+
+2023-09-01: <b>Announcements</b> <a href="../teaching/f2023_calc2/2023-09-01_dispute.pdf" title="Dispute related">Here</a> are procedures specifying details in the dispute policies.<br>
+2023-09-01: Welcome!<br>
+
+
+<h2><p>Homework</p></h2>
+TBA
+  <!--
+  
+  <b>Homework  #1</b> 10 problems.<br>
+Section 8.6: #1[(1),(2),(4),(6)], 2, 5, 6.<br>
+Section 9.1: #2, 3, 7, 8, 10, 12.<br><br>
+
+<b>Homework  #2</b> 10 problems.<br>
+Section 9.3: #1, 2, 4, 6, 7, 8, 9, 11, 12, 13.<br><br>
+ 
+
+<b>Homework  #3</b> 15 problems.<br>
+Section 9.4: #3, 4, 5, 6, 7, 9, 10.<br>
+Section 9.5: #1, 2, 3, 4.<br>
+Section 9.6: #3.<br>
+Section 9.8: #1, 3, 4.<br>
+ <br>
+ 
+<b>Homework  #4</b> 17 problems.<br>
+Section 10.1: #3, 4.<br>
+Section 10.2: #1, 2, 3, 4, 7.<br>
+Section 10.3: #3, 4, 5, 7.<br>
+Section 10.5: #1, 2, 3, 4, 5, 6.<br><br>
+
+<b>Homework  #5</b> 13 problems.<br>
+Section 10.6: #1, 2, 3, 4, 6, 7, 8.<br>
+Section 10.7: #1, 2, 3[(1),(2)], 5, 6.<br>
+Section 10.9: #1.<br><br>
+ 
+<b>Homework  #6</b> 13 problems.<br>
+Section 11.2: #1, 2, 3, 5.<br>
+Section 11.3: #1, 2, 4, 5, 6.<br>
+Section 11.4: #1, 2, 3, 4.<br><br>
+ 
+<b>Homework  #7</b> 9 problems.<br>
+Section 11.5: #1, 4, 5, 6.<br>
+Section 11.7: #1, 4, 5, 7, 9.<br><br>
+
+<b>Homework  #8</b> 28 problems.<br>
+Section 12.1: #1, 2, 3, 6[(1),(3),(5)].<br>
+Section 12.3: #1, 2, 3, 7, 8.<br>
+Section 12.4: #2, 4, 5, 6.<br>
+Section 12.5: #2, 3, 4, 5.<br>
+Section 12.6: #1, 2, 5, 7.<br>
+Section 12.7: #2, 5, 6, 7, 8, 9, 10.<br><br> 
+
+  -->
+  
+ 
+<h2><p>Exam Schedules</p></h2>
+TBA
+  
+<!--
+  
+  1st midterm Exam: <FONT COLOR="#C40062">04 October (Tuesday),</FONT> In-class.<br>
+- Coverage: Chapter 8 Section 6 and Chapter 9.<br>
+- Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
+  The average was 58.79. The maximum score achieved by a student was 100.<br><br>
+ 
+ 2nd midterm Exam: <FONT COLOR="#C40062">08 November (Tuesday),</FONT> In-class.<br>
+- Coverage: Chapter 10.<br>
+- Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
+- Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br>
+  The average was 75.24. The maximum score achieved by a student was 100.<br><br>
+
+ 3rd midterm Exam: <FONT COLOR="#C40062">29 November (Tuesday),</FONT> In-class.<br>
+- Coverage: Chapter 11.<br>
+- Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
+- Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br>
+ The average was 44.82. The maximum score achieved by a student was 100.<br><br>
+ 
+  Final Exam: <FONT COLOR="#C40062">15 December (Thursday) 17:00--17:50,</FONT> at E1-2 Room 306.<br>
+- Coverage: Chapter 12.<br>
+- Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+- Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br>
+ The average was 51.11. The maximum score achieved by a student was 100.<br><br>
+ 
+-->
+
+<h2><p>Links</p></h2>
+<a href="https://byungdo.github.io/">Webpage of Byungdo Park</a><br>
+<a href="https://edu.chungbuk.ac.kr/mathedu/index.do">CBNU Mathematics Education Department Homepage</a><br>
+<br><br>
+
+
+
+
+
+
+
+</font>
+<!-- FONT SIZE SPECIFICATION-->
+
+
+</font>
+</body>
+
+
+</html>
