--- a/teaching/f2023_dg2.html
+++ b/teaching/f2023_dg2.html
@@ -1,1 +1,124 @@
-.
+<html>
+<head>
+<title> Differential Geometry II </title>
+</head>
+<font face="Times New Roman">
+<body>
+<h1><p align="center">Differential Geometry II</p></h1>
+<h3><p align="center">Course 7412006 Section 01, Fall 2023</p></h3>
+<h3><p align="center">Tuesdays 13:00 - 13:50, Thursdays 10:00 - 11:50, Room: E1-1 #136</p></h3>
+<h3><p align="center">Chungbuk National University</p></h3>
+<br>
+
+
+<!-- FONT SIZE SPECIFICATION-->
+<font size="4" >
+<b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_chungbuk.jpg" width="337" height="62"><br>
+<b>Office Hours:</b> Tuesdays 18:00--18:50 at E1-1 #110 or by appointment.<br>
+<b>Syllabus:</b>  <a href="f2023_dg2/courseoutline.pdf" title="Open Course Outline">PDF</a> (updated)<br>
+
+
+<h2><p>Announcements</p></h2>
+<!--
+2022-12-21: Letter grades have been submitted. Happy Holidays!<br>
+2022-12-06: On this Thursday, we shall go over this <a href="f2022_dg2/handout4.pdf" title="Handout 4">handout</a>.<br>
+2022-12-03: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>
+2022-11-29: If you wish to see graded papers and the class attendance record, please send an email to the instructor to set up an appointment by December 19th, 2022 18:00.<br>
+2022-11-18: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> Details have been posted below.<br>   
+2022-11-18: <FONT COLOR="red">Homework #4, #5</FONT> have been posted below.<br>
+2022-11-03: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
+2022-11-03: <FONT color="#FF00FF"><b>2nd midterm exam announcement</b></FONT> Details have been posted below.<br>   
+2022-10-20: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
+2022-09-16: <FONT color="#FF00FF"><b>1st midterm exam announcement</b></FONT> Details have been posted below.<br>   
+2022-09-16: Video lectures will be available for you to watch during your Practice Teaching period. It will be open on September 19th 00:00. More details from announcements via email and eCampus.<br>
+2022-09-16: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
+2022-09-01: The courseoutline has been updated. See above.<br>
+2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
+-->
+2023-09-01: <b>Announcements</b> <a href="../teaching/f2023_calc2/2023-09-01_dispute.pdf" title="Dispute related">Here</a> are procedures specifying details in the dispute policies.<br>
+2023-09-01: Welcome!<br>
+
+
+<h2><p>Homework</p></h2>
+TBA
+  
+  <!--
+    Unless otherwise stated, problem numbers below refer to Solved Problems and Supplementary Problems at the end of each chapter.<br><br>
+
+<b>Homework  #1</b> 16 problems.<br>
+Problems from Chapter 8: #17, 19(a), 30, 33, 34, 38.<br>
+Problems from Chapter 9 Part 1: #1, 2, 4, 6, 33, 34, 35, 37, 38, 40.<br>
+  <br> 
+
+<b>Homework  #2</b> 14 problems.<br>  
+Problems from Chapter 9 Part 2: #7, 9, 12, 41, 42, 43.<br>  
+Problems from the National Exam: <a href="f2022_dg2/handout1.pdf" title="Selected problems from the national exam">Handout 1</a>.<br><br>  
+
+<b>Homework  #3</b> 12 problems.<br>  
+Problems from Chapter 9 Part 3: #10, 21, 22, 44, 48.<br>
+Problems from Chapter 9 Part 4: #26, 27, 45, 46, 47, 52, 55.<br><br>  
+  
+<b>Homework  #4</b> 13 problems.<br>
+Problems from Chapter 10: #3, 8, 9, 10, 30, 38.<br>
+Problems from Chapter 11: #8, 10, 30, 32, 33, 54, 55.<br><br>
+
+<b>Homework  #5</b> 8 problems.<br>
+Problems from the National Exam: <a href="f2022_dg2/handout2.pdf" title="Selected problems from the national exam">Handout 2</a>.<br><br>  
+  
+<b>Homework  #6</b> 2 problems.<br>
+<a href="f2022_dg2/handout3.pdf" title="Selected problems from the national exam">Handout 3</a>.<br><br>    
+  -->
+  
+<!--
+
+<b>Homework  #8</b> 7 problems. Due Date: Before the final exam.<br>
+
+
+ -->
+
+
+<h2><p>Exam Schedules</p></h2>
+TBA
+<!--  
+1st midterm Exam: <FONT COLOR="#C40062">11 October (Tuesday),</FONT> In-class.<br>
+- Coverage: From Chapter 8 tangent vectors to Chapter 9 the first fundamental form.<br>
+- Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
+- The average was 62 and the maximum score achieved by a student was 97.<br><br>
+  
+2nd midterm Exam: <FONT COLOR="#C40062">15 November (Tuesday),</FONT> In-class.<br>
+- Coverage: The entire Chapter 9 after the first fundamental form.<br>
+- Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
+- The average was 52.72 and the maximum score achieved by a student was 80.<br><br>
+  
+Finam Exam: <FONT COLOR="#C40062">15 December (Thursday),</FONT> 13:00--14:50 at E1-1 Room 136.<br>
+- Coverage: Everything we have covered in this semester.<br>
+- Total 6 questions. There will be 1 set of T/F questions, 2 problems identical to the national exam problems, and 3 problems similar to national exams and/or homework problems.<br>
+- The average was 52.72 and the maximum score achieved by a student was 84.<br><br> 
+ -->
+
+  
+  
+<h2><p>Assessment of Project-Based Learning (PBL)</p></h2>
+For an extra credit, you should record a 20-minute long video lecture about one of the following:<br>
+(1) A sample lecture on any topic listed on the syllabus of this course.<br>
+(2) A sample lecture on a concept from secondary school geometry curricular.<br><br>
+You should submit the video in a form of a YouTube video link by choosing the sharing option "unlisted." Please use <a href="https://forms.gle/fXwkvc8TpLJyJhVp6" title="A Google form to hand-in your work">this form</a> to submit your work.<br><br>
+  
+Your video will be disclosed to your classmates in this course as a part of a YouTube playlist. You may turn your video into “private” or even delete the video after your letter grade for this course is assigned.<br><br>
+
+
+<h2><p>Links</p></h2>
+<a href="https://byungdo.github.io/">Webpage of Byungdo Park</a><br>
+<a href="http://edu.chungbuk.ac.kr/mathedu/index.do">CBNU Mathematics Education Department Homepage</a><br>
+<br><br>
+
+
+</font>
+<!-- FONT SIZE SPECIFICATION-->
+
+
+</font>
+</body>
+
+
+</html>
