--- a/teaching/f2023_calc2.html
+++ b/teaching/f2023_calc2.html
@@ -38,6 +38,7 @@
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 2022-09-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
  -->
+2023-09-13: The date and time for the <FONT color="#FF00FF"><b>final exam</b></FONT> has been posted below. This day is the make-up day for the CBNU anniversary (Wednesday September 27th). <br>   
 2023-09-13: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>    
 2023-09-13: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>    
 2023-09-01: <b>Announcements</b> <a href="../teaching/f2023_calc2/2023-09-01_dispute.pdf" title="Dispute related">Here</a> are procedures specifying details in the dispute policies.<br>
@@ -89,10 +90,15 @@ Section 12.6: #1, 2, 5, 7.<br>
 Section 12.7: #2, 5, 6, 7, 8, 9, 10.<br><br> 
 
   -->
-  
- 
-<h2><p>Exam Schedules</p></h2>
-TBA
+
+ <h2><p>Exam Schedules</p></h2>
+
+1st midterm Exam: TBA<br><br>
+2nd midterm Exam: TBA<br><br>
+3rd midterm Exam: TBA<br><br>
+   
+Final Exam: <FONT COLOR="#C40062">15 December (Friday),</FONT> 16:00--16:50 at E1-2 Room 306.<br>
+Detailed announcement will be followed in due time.<br><br>
   
 <!--
   
