--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 I am an Associate Professor at the <a href=http://edu.chungbuk.ac.kr/mathedu/index.do>Department of Mathematics Education</a>, <a href=https://www.cbnu.ac.kr/site/english/main.do>Chungbuk National University</a>.<br><br>
 
   <!--
-I am currently serving as an Associate Dean of the <a href=https://edu.chungbuk.ac.kr/www/index.do>the College of Education</a> and the <a href=https://edu.chungbuk.ac.kr/gsedu/index.do>Graduate School of Education</a> as well as a representative of the <a href=https://faculty.chungbuk.ac.kr/>Faculty Assembly</a>.
+and an Associate Dean of the <a href=https://edu.chungbuk.ac.kr/www/index.do>College of Education</a>
 -->
  
   
