--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 
 <h2><p>About me</p></h2>
-I am an Associate Professor at the <a href=http://edu.chungbuk.ac.kr/mathedu/index.do>Department of Mathematics Education</a>, <a href=https://www.cbnu.ac.kr/site/english/main.do>Chungbuk National University</a>.<br><br>
+I am an Associate Professor at the <a href=http://edu.chungbuk.ac.kr/mathedu/index.do>Department of Mathematics Education</a> and an Associate Dean of the <a href=https://edu.chungbuk.ac.kr/www/index.do>College of Education</a> at the <a href=https://www.cbnu.ac.kr/site/english/main.do>Chungbuk National University</a>.<br><br>
 
   <!--
-and an Associate Dean of the <a href=https://edu.chungbuk.ac.kr/www/index.do>College of Education</a>
+
 -->
  
   
@@ -24,6 +24,8 @@ Here is my <a href="CV_Park.pdf">CV</a>. <!-- My research is supported by the <a
 <b>Address:</b> Department of Mathematics Education, Chungbuk National University, 1 Chungdaero Seowon-Gu, Cheongju 28644, Republic of Korea<br><br>
 <b>Office:</b> E1-1 Room 110<br><br>
 <b>Phone:</b> +82-43-261-2721<br><br>
+<b>Associate Dean's Office:</b> E1-2 Room 246<br><br>
+<b>Phone:</b> +82-43-261-2641<br><br>
 
 <!--  I am an Adjunct Assistant Professor at <a href="http://www.hunter.cuny.edu/">CUNY Hunter College</a> and <a href="http://www.bcc.cuny.edu/">CUNY Bronx Community College</a> in New York City.<br><br> -->
 
