--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <h2><p>About me</p></h2>
-I am an Associate Professor at the <a href=http://edu.chungbuk.ac.kr/mathedu/index.do>Department of Mathematics Education</a> and the Associate Dean of the <a href=https://edu.chungbuk.ac.kr/www/index.do>College of Education</a> at the <a href=https://www.cbnu.ac.kr/site/english/main.do>Chungbuk National University</a>.<br><br>
+I am an Associate Professor at the <a href=http://edu.chungbuk.ac.kr/mathedu/index.do>Department of Mathematics Education</a> and the Associate Dean of the <a href=https://edu.chungbuk.ac.kr/www/index.do>College of Education</a> at the <a href=https://www.cbnu.ac.kr/site/english/main.do>Chungbuk National University</a>.<br><br>
 
   
   
