--- a/teaching/s2024_dg1.html
+++ b/teaching/s2024_dg1.html
@@ -36,6 +36,9 @@
 2023-03-26: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>     
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
   -->
+2024-04-11: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>    
+2024-04-11: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>     
+2024-04-11: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>     
 2024-03-24: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>   
 2024-03-17: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>   
 2024-03-17: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>    
@@ -51,18 +54,12 @@ Problems from Chapter 3: #1, 9, 15, 17, 18, 21, 25, 26, 31, 32, 34.<br><br>
 <b>Homework  #2</b> 8 problems.<br>
 Problems from Chapter 4 (Part 1): #1, 2, 4, 5, 9, 26, 27, 29<br><br>
 
-
-
 <b>Homework  #3</b> 10 problems.<br>
 Problems from Chapter 4 (Part 2): #11, 12, 13, 16, 17, 18, 19, 21, 28, 30<br><br>  
-  
-  <!--
-
 
 <b>Homework  #4</b> 12 problems.<br>
 Problems from Chapter 4 (Part 3): #32, 33, 34, 35, 38<br>  
-Problems from the National Exam: <a href="s2023_dg1/handout1.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
- 
+Problems from the National Exam: <a href="s2024_dg1/handout1.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
 
 <b>Homework  #5</b>  20 problems.<br>
 Problems from Chapter 5: #5, 7, 8<br>
@@ -72,6 +69,10 @@ Problems from O'Neill, Elementary Differential Geometry, p.40 Exercise #4, 5, 6,
 Problems from O'Neill, Elementary Differential Geometry, p.106 Exercise #2, 7, 8<br>
 Problems from O'Neill, Elementary Differential Geometry, p.110 Exercise #2, 4<br>
 Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><br>
+  
+  <!--
+
+ 
 
 <b>Homework  #6</b> 7 problems.<br>
 Problems from Handout 2.<br><br> 
@@ -92,11 +93,13 @@ Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="s2022_dg1/hw8no10addend
 
 
 <h2><p>Exam Schedules</p></h2>
-TBA<br>  <!--
-1st midterm exam: <FONT COLOR="#C40062">11 April (Tuesday) 13:00--13:50</FONT> in-class. <br>
-- Coverage: Chapters 3 and 4 of the main textbook and Handout 1 problems (2016 to 2020 problems only; 2021 to 2023 problems will be covered in the 2nd midterm) <br>
-- Total 4 questions.<br>
+Midterm exam: <FONT COLOR="#C40062">24 April (Tuesday) 13:00--13:50</FONT> in-class. <br>
+- Coverage: Chapters 3, 4, and 5 of the main textbook including Handout 1<br>
+- Total 8 questions.There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+
+  
+  <!--
 The average was 85.52. The maximum score achieved by a student was 100.<br><br>  
   
 2nd midterm exam: <FONT COLOR="#C40062">23 May (Tuesday) 13:00--13:50</FONT> in-class. <br>
