--- a/teaching/s2024_geom1.html
+++ b/teaching/s2024_geom1.html
@@ -37,11 +37,14 @@
 2023-03-30: <FONT color="#FF00FF"><b>The 1st midterm exam announcement</b></FONT> The detail has been posted below.<br>   
 2023-03-26: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
 2023-03-26: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
-2023-03-20: <b>Announcements</b> The class will go online on March 28th 11:00--11:50. We still meet on the 28th 10:00 in classroom. Please read email announcements.<br> 
 2023-03-20: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
 2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br> 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 -->
+2023-04-11: <FONT color="#FF00FF"><b>The midterm exam announcement</b></FONT> The detail has been posted below.<br>    
+2024-04-11: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
+2024-04-11: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
+2024-04-10: <b>Announcements</b> The class will go online for today's 14:00 class. Watch the lecture through eCampus by April 24th.<br>  
 2024-03-24: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2024-03-17: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>  
 2024-03-17: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>   
@@ -72,9 +75,6 @@ Exercises in Section 3.3. p.25 #2<br>
 Exercises in Section 3.4. p.27 #1<br>
 Exercises in Section 3.5. p.30 #1, 2, 6, 7, 8, 9<br>
 <br> 
-  
-  <!--
-
 
 
  <b>Homework  #4</b> 10 problems.<br>
@@ -90,6 +90,11 @@ Exercises in Section 5.3. p.51 #1<br>
 Exercises in Section 6.2. p.58 #2, 3, 4, 6<br>
 Exercises in Section 6.3. p.61 #1<br> 
 Exercises in Section 6.4. p.63 #1<br><br>
+
+ 
+  <!--
+
+
 
 <b>Homework  #6</b> 8 problems.<br>
  Exercises in Section 7.1. p.68 #1, 2<br>
@@ -122,14 +127,13 @@ Exercises in Section 6.4. p.63 #1<br><br>
 
 
 <h2><p>Exam Schedules</p></h2>
-TBA<br>
+  The 1st midterm exam: <FONT COLOR="#C40062">25 April (Thursday) 13:00--14:40</FONT> in-class. <br>
+- Coverage: Chapters 1 to 6. Only up to those sections completely covered by April 18th will be covered.<br>
+- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
 
   <!--
-  The 1st midterm exam: <FONT COLOR="#C40062">12 April (Wednesday) 17:00--17:50</FONT> in-class. <br>
-- Coverage: Chapters 1 to 4.<br>
-- Total 4 questions.<br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-The average was 65.10. The maximum score achieved by a student was 100.<br>
+ The average was 65.10. The maximum score achieved by a student was 100.<br>
  <br>
  
  The 2nd midterm exam: <FONT COLOR="#C40062">24 May (Wednesday) 17:00--17:50</FONT> in-class. <br>
